# hotconsole

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
examples/: command_hello_world.py  command_with_options.py  simple_command.py  unsuccessfull_command.py
hotconsole/: __init__.py  commands.py  helpers.py  hotconsole.py
test_hotconsole/: test_hotconsole.py
tests/: test_hotconsole.py
